@@ -1,3 +1,9 @@
+2010-04-02  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tcl.decls (Tcl_LoadFile): Add missing "const" in signature,
+	* generic/tclIOUtil.c (Tcl_LoadFile): and some formatting fixes
+	* generic/tclDecls.h   (regenerated)
+
 2010-04-02  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclIOUtil.c (Tcl_LoadFile): Corrections to previous commit
